--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <title>Evaluación Intermedia Nata</title>
 </head>
 
-<body>
+<body class="page">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
